--- a/views/login.html
+++ b/views/login.html
@@ -2,22 +2,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SignUp</title>
+<title>login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href="signup.css" rel="stylesheet"/>
+<link href="login.css" rel="stylesheet"/>
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
 	<div class="main-w3layouts wrapper">
-		<h1>SignUp</h1>
+		<h1>Login</h1>
 		<div class="main-agileinfo">
 			<div class="agileits-top">
-				<form id="signForm">
-					<input class="text" type="text" name="Name" placeholder="Name" id="name" required="">
+				<form id="loginform">
 					<input class="text email" type="email" name="email" placeholder="Email" id="email" required="">
-					<input class="text" type="tel" name="mobile" placeholder="Mobile" id="mobile" required="">
 					<input class="text w3lpass" type="password" name="password" id="password" placeholder="Confirm Password" required="">
 					<div class="wthree-text">
 						<label class="anim">
@@ -26,13 +24,13 @@
 						</label>
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="SIGNUP">
+					<input type="submit" value="Login">
 				</form>
-				<p>Have Account<a href="#"> Login Now!</a></p>
+				<p>Don't have an Account? <a href="#">SignUp</a></p>
 			</div>
 		</div>
 	</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="signUp.js"></script>
+<script src="login.js"></script>
 </html>
