--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,13 @@
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-	
+	<div>
+        <form >
+            <i></i>
+            <input type="text" name="message" id="message">
+            <button type="submit" id="sendMessage">send</button>
+        </form>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="index.js"></script>
