--- a/views/index.html
+++ b/views/index.html
@@ -14,10 +14,10 @@
         <h3>Messages</h3>
     </div>
 	<div>
-        <form >
+        <form id="sendMessage">
             <i></i>
             <input type="text" name="message" id="message">
-            <button type="submit" id="sendMessage">send</button>
+            <button type="submit">send</button>
         </form>
     </div>
 </body>
