--- a/views/signUp.html
+++ b/views/signUp.html
@@ -28,7 +28,7 @@
 					</div>
 					<input type="submit" value="SIGNUP">
 				</form>
-				<p>Have Account<a href="#"> Login Now!</a></p>
+				<p>Have Account<a href="http://localhost:3000/login"> Login Now!</a></p>
 			</div>
 		</div>
 	</div>
