--- a/views/index.html
+++ b/views/index.html
@@ -10,15 +10,18 @@
 <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
-    <div>
-        <h3>Messages</h3>
-    </div>
+
 	<div>
         <form id="sendMessage">
             <i></i>
             <input type="text" name="message" id="message">
             <button type="submit">send</button>
         </form>
+    </div>
+    <hr>
+
+    <div class="message_div" id="Messages">
+        <h3>Messages</h3>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
