--- a/views/index.css
+++ b/views/index.css
@@ -1,19 +1,45 @@
-body{
+body {
     text-align: center;
-	background-color: #408b91;
+    background-color: #408b91;
 }
-td,th {
-    padding: 12px 15px;
+
+td,
+th {
+    padding: 2px 3px;
 }
+
 tr {
     background-color: #009879;
     color: #0f0606;
     text-align: left;
 }
+
 tr:nth-of-type(even) {
     background-color: #f3f3f3;
 }
+
 tr.active-row {
     font-weight: bold;
     color: #009879;
+}
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 33%;
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+}
+
+table {
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.btn{
+    width: 300px;
 }
